app/less/custom.less
body {
  padding-top: 20px;
  padding-bottom: 20px;
}

.control-wrapper {
  .make-md-column(5);

  .caption {
    label { .text-hide; }
  }

  .source {
    label { .text-hide; }
  }

  .file-input {
    .form-group;
    margin-top: 20px;
  }

  .color-input {

  }

}

.meme-wrapper {
  .make-md-column(7);

  .meme {
    padding: 30px;
    width: 640px;
    height: 320px;
    border: 1px solid #ccc;
    background: #efefef;

    .caption {
      line-height: 1.25em;
      font-size: 24px;
      font-weight: bold;
      padding-bottom: .5em;
    }
  }
}

